--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@react-three/drei": "^9.102.6",
-    "@react-three/fiber": "^8.15.19",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@types/three": "^0.162.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.2.10",
-    "lucide-react": "^0.363.0",
-    "next": "14.2.3",
-    "radix-ui": "^1.4.3",
+    "lucide-react": "^0.562.0",
+    "next": "^16.1.3",
     "next-themes": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "radix-ui": "^1.4.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
