--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-themes": "^0.3.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.3",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.2.2",
