--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@types/three": "^0.162.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.2.10",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "next": "^16.1.3",
     "next-themes": "^0.3.0",
@@ -26,10 +29,14 @@
     "react": "^19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
+    "react-hook-form": "^7.71.1",
+    "react-resizable-panels": "^4.4.1",
     "recharts": "^2.12.7",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.162.0",
+    "vaul": "^1.1.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
